# IterViz

./: .gitignore  ARCHITECTURE.md  README.md  SPEC.md  TODO.md  test-plan-m0-semantic-flow.md  test-plan-m0-spacing.md  test-plan-m0-ui-rework.md  test-plan-m0.md  test-plan.md  test-report-m0-semantic-flow.md  test-report-m0-ui-rework.md  test-report-m0.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  agents.py  api.py  architect.py  assignments.py  compiler.py  contract.py  llm.py  logger.py  main.py  orchestrator.py  schemas.py  subgraph.py  subgraphs.py  ws.py
backend/app/prompts/: architect.md  compiler.md  connector.md  integrator.md  planner.md  subagent.md
backend/scripts/: eval_compiler.py
backend/scripts/seed_contracts/: _expected.json  cycle_in_data_edges.json  intent_mismatch.json  low_confidence_no_question.json  missing_payload.json  orphaned_node.json  silent_db_choice.json  unhandled_failure.json  valid_simple.json
backend/tests/: conftest.py  test_agents.py  test_api.py  test_architect.py  test_assignments.py  test_compiler.py  test_contract.py  test_orchestrator.py  test_phase1_loop.py  test_schemas.py  test_subgraph.py  test_subgraph_api.py  test_ws.py
docs/: 01-1-project-purpose-and-goals.md  01-2-repository-status-and-roadmap.md  01-overview.md  02-1-data-ingestion-and-telemetry-collection.md  02-2-data-transformation-and-storage.md  02-3-rendering-engine-and-frontend-ui.md  02-4-implementation-subgraphs.md  02-architecture.md  03-1-configuration-schema-reference.md  03-2-usage-examples-and-integration-guide.md  (+5 more)
(+99 files in other folders)
