[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glasshouse-backend"
version = "0.1.0"
description = "Glasshouse — backend services (Architect, Compiler, Orchestrator)."
requires-python = ">=3.10"
readme = "../README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
