[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glasshouse-backend"
version = "0.1.0"
description = "Glasshouse backend: Architect, Blind Compiler, and Orchestrator services."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Glasshouse" }]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "instructor>=0.5.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]
